--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bitgo/ecpair",
-  "version": "2.0.1",
+  "version": "2.1.0-rc.0",
   "description": "Fork of ecpair with BitGo specific changes",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
