--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - '!release-do-not-use'
   pull_request:
 
 jobs:
@@ -77,3 +78,25 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run lint:tests
+  release:
+    if: github.repository_owner == 'BitGo' && github.event_name == 'push' && github.ref_name == 'master'
+    runs-on: ubuntu-latest
+    needs:
+      - audit
+      - unit
+      - coverage
+      - format
+      - gitdiff
+      - lint
+      - lint-tests
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+          cache: 'npm'
+      - run: npm ci
+      - run: ./node_modules/.bin/semantic-release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
