--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bitgo/ecpair",
-  "version": "2.1.0-rc.0",
+  "name": "@bitgo-forks/ecpair",
+  "version": "0.0.0-semantic-release-managed",
   "description": "Fork of ecpair with BitGo specific changes",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
@@ -73,6 +73,7 @@
     "prettier": "^2.4.1",
     "proxyquire": "^2.0.1",
     "rimraf": "^2.6.3",
+    "semantic-release": "19.0.5",
     "tiny-secp256k1": "^2.2.1",
     "ts-node": "^8.3.0",
     "tslint": "^6.1.3",
