chore(renovate): update schedule, enabledManagers
enabled weekly scan schedule of renovate only for github-actions based
dependencies update and rest all dependencies update would be
disabled.

Ticket: DO-3026

--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,11 @@
   ],
   "baseBranches": [
     "master"
+  ],
+  "enabledManagers": [
+    "github-actions"
+  ],
+  "schedule": [
+    "on monday"
   ]
 }
